# deezcord

client/: Cargo.toml
client/src/: config.rs  connect.rs  main.rs  rooms.rs  signal.rs  socket.rs  user.rs
client/src/audio/: capture.rs  decode.rs  mod.rs  receive.rs  send.rs
client/src/commands/: mod.rs  wait_for_ack.rs
client/src/input/: listen.rs  mod.rs
client/src/peer/: connect_peer.rs  create.rs  handle_answer.rs  handle_ice_candidate.rs  handle_offer.rs  mod.rs
client/src/socket/: listen.rs  send.rs
server/: .gitignore  bun.lockb  eslint.config.ts  package.json  tsconfig.json
server/src/: index.ts
server/src/commands/: ack.ts  connect.ts  index.ts  mod-client.ts  mod-server.ts  send.ts
server/src/commands/handlers/: connect.ts  create-room.ts  join.ts  list-rooms.ts  send-answer.ts  send-ice-candidate.ts  send-offer.ts
server/src/db/: index.ts
server/src/stun/: index.ts  messages.ts  server.ts
server/src/stun/types/: enums.ts  error.ts  types.ts
