[package]
name = "deezcord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
cpal = "0.15.3"
dirs = "5.0.1"
futures-util = "0.3.30"
lazy_static = "1.5.0"
opus = "0.3.0"
rand = "0.8.5"
rodio = "0.19.0"
rtp = "0.11.0"
serde = "1.0.208"
serde_json = "1.0.125"
termion = "4.0.2"
tokio = "1.39.2"
tokio-tungstenite = "0.23.1"
uuid = "1.10.0"
webrtc = "0.11.0"
